remove and add some changes

--- a/alumni-engagement.html
+++ b/alumni-engagement.html
@@ -637,7 +637,7 @@
     </div>
     <!-- End Pages Banner Area -->
     <!-- teacher's section -->
-    <section class="placementTeacher py-5" style="background-image: url('/public/images/hiringDrivesBg.svg');">
+    <section class="placementTeacher py-5" style="background-image: url('public/images/hiringDrivesBg.svg');">
         <h2 class="text-center gradient-one wow fadeInUp" data-wow-delay=".7s">Alumni Engagement<br></h2>
         <section class="commendations">
             <div class="container">
@@ -645,8 +645,8 @@
                     <div class="col-sm-4">
                         <div class="course__item mb-3 position-relative">
                             <div class="course__thumb w-img fix br-10">
-                                <a href="course-details.html">
-                                    <img src="/public/images/teacher/banking.gif" alt="">
+                                <a href="#">
+                                    <img src="public/images/teacher/banking.gif" alt="">
                                 </a>
                                 <div class="course__overlay">
                                     
@@ -654,8 +654,8 @@
                             </div>
                             <div class="course__content position-relative">
                                 <h3 class="course__title">
-                                    <a href="course-details.html">
-                                        Mr. Saurabh Pathak.</a>
+                                    
+                                        Mr. Saurabh Pathak.
                                 </h3>
                                 <ul class="list-unstyled pb-3">
                                     <li>Training Manager, HDB Financial Services Ltd.</li>
@@ -691,14 +691,14 @@
                     <div class="col-sm-4">
                         <div class="course__item white-bg transition-3 mb-30 position-relative">
                             <div class="course__thumb w-img fix br-10">
-                                <a href="course-details.html">
-                                    <img src="/public/images/teacher/salesee.png" alt="">
+                                <a href="#">
+                                    <img src="public/images/teacher/salesee.png" alt="">
                                 </a>
                                 <div class="course__overlay"></div>
                             </div>
                             <div class="course__content p-relative">
                                 <h3 class="course__title">
-                                    <a href="course-details.html">Mr. Harsh Bardhan Pandey</a>
+                                    Mr. Harsh Bardhan Pandey
                                 </h3>
                                 <ul class="list-unstyled pb-3">
                                     <li>Managing Director, Morpheus Biz Solutions Pvt. Ltd.</li>
@@ -733,13 +733,13 @@
                     <div class="col-sm-4">
                         <div class="course__item white-bg transition-3 mb-30 position-relative">
                             <div class="course__thumb w-img fix br-10">
-                                <a href="course-details.html">
-                                    <img src="/public/images/teacher/transs.jpg" alt="">
+                                <a href="#">
+                                    <img src="public/images/teacher/transs.jpg" alt="">
                                 </a>
                             </div>
                             <div class="course__content p-relative">
                                 <h3 class="course__title">
-                                    <a href="course-details.html">Mr. Vaibhav Singh</a>
+                                    Mr. Vaibhav Singh
                                 </h3>
                                 <ul class="list-unstyled pb-3">
                                     <li>Executive Trainee, Transsion India, Noida</li>
@@ -776,13 +776,13 @@
                     <div class="col-sm-4">
                         <div class="course__item white-bg transition-3 mb-30 position-relative">
                             <div class="course__thumb w-img fix br-10">
-                                <a href="course-details.html">
-                                    <img src="/public/images/teacher/jain.gif" alt="">
+                                <a href="#">
+                                    <img src="public/images/teacher/jain.gif" alt="">
                                 </a>
                             </div>
                             <div class="course__content p-relative">
                                 <h3 class="course__title">
-                                    <a href="course-details.html">Mr. Vipul Jain</a>
+                                    Mr. Vipul Jain
                                 </h3>
                                 <ul class="list-unstyled pb-3">
                                     <li>Managing Director, My Irrigracio World Pvt. ltd, Ghaziabad</li>
@@ -819,13 +819,13 @@
                     <div class="col-sm-4">
                         <div class="course__item white-bg transition-3 mb-30 position-relative">
                             <div class="course__thumb w-img fix br-10">
-                                <a href="course-details.html">
-                                    <img src="/public/images/teacher/alum.gif" alt="">
+                                <a href="#">
+                                    <img src="public/images/teacher/alum.gif" alt="">
                                 </a>
                             </div>
                             <div class="course__content p-relative">
                                 <h3 class="course__title">
-                                    <a href="course-details.html">Mr. Shreyas Gupta</a>
+                                    Mr. Shreyas Gupta
                                 </h3>
                                 <ul class="list-unstyled pb-3">
                                     <li>Lead, Operations and Tech Support, Sabre Tech, India Workshop</li>
@@ -860,13 +860,13 @@
                     <div class="col-sm-4">
                         <div class="course__item white-bg transition-3 mb-30 position-relative">
                             <div class="course__thumb w-img fix br-10">
-                                <a href="course-details.html">
-                                    <img src="/public/images/teacher/sssssssss.png" alt="">
+                                <a href="#">
+                                    <img src="public/images/teacher/sssssssss.png" alt="">
                                 </a>
                             </div>
                             <div class="course__content p-relative">
                                 <h3 class="course__title">
-                                    <a href="course-details.html">Mr. Vijay Khetrapal</a>
+                                    Mr. Vijay Khetrapal
                                 </h3>
                                 <ul class="list-unstyled pb-3">
                                     <li>Cluster Head at ICICI Bank</li>
@@ -903,13 +903,13 @@
                     <div class="col-sm-4">
                         <div class="course__item white-bg transition-3 mb-30 position-relative">
                             <div class="course__thumb w-img fix br-10">
-                                <a href="course-details.html">
-                                    <img src="/public/images/teacher/cva.gif" alt="">
+                                <a href="#">
+                                    <img src="public/images/teacher/cva.gif" alt="">
                                 </a>
                             </div>
                             <div class="course__content p-relative">
                                 <h3 class="course__title">
-                                    <a href="course-details.html">Dr. Bhaskar Roy</a>
+                                    Dr. Bhaskar Roy
                                 </h3>
                                 <ul class="list-unstyled pb-3">
                                     <li>Global Leader at Genpact </li>
@@ -946,13 +946,13 @@
                     <div class="col-sm-4">
                         <div class="course__item white-bg transition-3 mb-30 position-relative">
                             <div class="course__thumb w-img fix br-10">
-                                <a href="course-details.html">
-                                    <img src="/public/images/teacher/aaaaaaaaa.jpg" alt="">
+                                <a href="#">
+                                    <img src="public/images/teacher/aaaaaaaaa.jpg" alt="">
                                 </a>
                             </div>
                             <div class="course__content p-relative">
                                 <h3 class="course__title">
-                                    <a href="course-details.html">Mr. Akshat Kant</a>
+                                    Mr. Akshat Kant
                                 </h3>
                                 <ul class="list-unstyled pb-3">
                                     <li>Senior Manager – Solution Architect at NSE IT Ltd.</li>
@@ -988,13 +988,13 @@
                     <div class="col-sm-4">
                         <div class="course__item white-bg transition-3 mb-30 position-relative">
                             <div class="course__thumb w-img fix br-10">
-                                <a href="course-details.html">
-                                    <img src="/public/images/teacher/jira.jpg" alt="">
+                                <a href="#">
+                                    <img src="public/images/teacher/jira.jpg" alt="">
                                 </a>
                             </div>
                             <div class="course__content p-relative">
                                 <h3 class="course__title">
-                                    <a href="course-details.html">Mr. Biplab Sengupta</a>
+                                  Mr. Biplab Sengupta
                                 </h3>
                                 <ul class="list-unstyled pb-3">
                                     <li>Founder CEO of HR Sutra Learning Academy</li>
