--- a/alumni-meet.html
+++ b/alumni-meet.html
@@ -653,70 +653,70 @@
             <div class="row gy-4">
                 <div class="col-sm-4">
                     <div class="alumniMeetCard">
-                        <img src="/public/images/blog/indiaGate.jpeg" alt="" class="img-fluid"
+                        <img src="public/images/blog/indiaGate.jpeg" alt="" class="img-fluid"
                             style="height: 228px!important;width: 100%;object-fit:cover ;">
                         <div class="content">
                             <h2>New Delhi</h2>
                             <p>08-03-2025</p>
-                            <button>Read More</button>
+                            <button onclick="window.location.href='/view-alumni-details.html'">Read More</button>
                         </div>
                     </div>
 
                 </div>
                 <div class="col-sm-4">
                     <div class="alumniMeetCard">
-                        <img src="/public/images/blog/encient.jpeg" alt="" class="img-fluid"
+                        <img src="public/images/blog/encient.jpeg" alt="" class="img-fluid"
                             style="height: 228px!important;width: 100%;object-fit:cover ;">
                         <div class="content">
                             <h2>Pune</h2>
                             <p>19-01-2025</p>
-                            <button>Read More</button>
+                            <button onclick="window.location.href='/view-alumni-details.html'">Read More</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="alumniMeetCard">
-                        <img src="/public/images/blog/flyover.jpeg" alt="" class="img-fluid"
+                        <img src="public/images/blog/flyover.jpeg" alt="" class="img-fluid"
                             style="height: 228px!important;width: 100%;object-fit:cover ;">
                         <div class="content">
                             <h2>Mumbai</h2>
                             <p>18-01-2025</p>
-                            <button>Read More</button>
+                            <button onclick="window.location.href='/view-alumni-details.html'">Read More</button>
                         </div>
                     </div>
                 </div>
 
                 <div class="col-sm-4">
                     <div class="alumniMeetCard">
-                        <img src="/public/images/blog/flyover.jpeg" alt="" class="img-fluid"
+                        <img src="public/images/blog/flyover.jpeg" alt="" class="img-fluid"
                             style="height: 228px!important;width: 100%;object-fit:cover ;">
                         <div class="content">
                             <h2>New Delhi</h2>
                             <p>08-03-2025</p>
-                            <button>Read More</button>
+                            <button onclick="window.location.href='/view-alumni-details.html'">Read More</button>
                         </div>
                     </div>
 
                 </div>
                 <div class="col-sm-4">
                     <div class="alumniMeetCard">
-                        <img src="/public/images/blog/encient.jpeg" alt="" class="img-fluid"
+                        <img src="public/images/blog/encient.jpeg" alt="" class="img-fluid"
                             style="height: 228px!important;width: 100%;object-fit:cover ;">
                         <div class="content">
                             <h2>Pune</h2>
                             <p>19-01-2025</p>
-                            <button>Read More</button>
+                            <button onclick="window.location.href='/view-alumni-details.html'">Read More</button>
                         </div>
                     </div>
                 </div>
                 <div class="col-sm-4">
                     <div class="alumniMeetCard">
-                        <img src="/public/images/blog/flyover.jpeg" alt="" class="img-fluid"
+                        <img src="public/images/blog/flyover.jpeg" alt="" class="img-fluid"
                             style="height: 228px!important;width: 100%;object-fit:cover ;">
                         <div class="content">
                             <h2>Mumbai</h2>
                             <p>18-01-2025</p>
-                            <button>Read More</button>
+                            <button onclick="window.location.href='/view-alumni-details.html'">Read More</button>
                         </div>
                     </div>
                 </div>
