--- a/centre-of-online-learning-and-e-resources.html
+++ b/centre-of-online-learning-and-e-resources.html
@@ -662,7 +662,7 @@
 
 
             <div class="about-varanasi pt-20 mediaLabs img-wrapper journey">
-                <img src="/public/images/campus/library.jpg" alt="" class="img-fluid scroll-grow-img">
+                <img src="public/images/campus/banner1.JPG" alt="" class="img-fluid scroll-grow-img">
             </div>
             <p class="pt-2">School of Management Sciences (SMS), Varanasi took the first initiative towards online
                 learning in September 2013 and become Resource Centre for Spoken Tutorial Project Conducted by IIT
@@ -716,14 +716,9 @@
                     </div>
 
                     <div class="col-sm-6">
-                        <div class="knowledge-card">
-                            <h5>Journals</h5>
-                            <ul>
-                                <li>Mr. Irfan Ahmed Khan</li>
-                                <li>Mr. Sushil Kumar</li>
-                                <li>Mrs. Poorva S Sabnis</li>
-                            </ul>
-                        </div>
+                       
+                            <img src="public/images/campus/0V8A0726.JPG" alt="" class="img-fluid rounded shadow">
+                      
                     </div>
 
 
@@ -732,12 +727,12 @@
             <div class="teamMember py-5">
                 <h2 class="color-blue text-center py-1">Team Members:</h2>
 
-                <div class="swiper mySwiper2 TeamMem__slider p-sm-2">
+                <div class="swiper  TeamMem__slider p-sm-2">
                     <div class="swiper-wrapper ">
                         <div class="swiper-slide">
                             <div class="card card-hover profile-card">
 
-                                <img src="/public/images/teacher/banking.gif" alt="Aditya Kumar Gupta">
+                                <img src="public/images/teacher/Dr. Aditya Gupta.JPG" alt="Aditya Kumar Gupta">
                                 <div class="card-overlay">
                                     <h2>Aditya Kumar Gupta</h2>
                                 </div>
@@ -746,45 +741,45 @@
                         <div class="swiper-slide">
                             <div class="card card-hover profile-card">
 
-                                <img src="/public/images/teacher/banking.gif" alt="Aditya Kumar Gupta">
+                                <img src="public/images/teacher/banking.gif" alt="Aditya Kumar Gupta">
                                 <div class="card-overlay">
-                                    <h2>Aditya Kumar Gupta</h2>
+                                    <h2>Dr. Ashutosh Shukla</h2>
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="card card-hover profile-card">
 
-                                <img src="/public/images/teacher/banking.gif" alt="Aditya Kumar Gupta">
+                                <img src="public/images/teacher/banking.gif" alt="Aditya Kumar Gupta">
                                 <div class="card-overlay">
-                                    <h2>Aditya Kumar Gupta</h2>
+                                    <h2>Amit Kumar Bhanja</h2>
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="card card-hover profile-card">
 
-                                <img src="/public/images/teacher/banking.gif" alt="Aditya Kumar Gupta">
+                                <img src="public/images/teacher/himanshu upadhyay.JPG" alt="Himanshu Upadhyay">
                                 <div class="card-overlay">
-                                    <h2>Aditya Kumar Gupta</h2>
+                                    <h2>Himanshu Upadhyay</h2>
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="card card-hover profile-card">
 
-                                <img src="/public/images/teacher/banking.gif" alt="Aditya Kumar Gupta">
+                                <img src="public/images/teacher/banking.gif" alt="Aditya Kumar Gupta">
                                 <div class="card-overlay">
-                                    <h2>Aditya Kumar Gupta</h2>
+                                    <h2>Sushil K Singh</h2>
                                 </div>
                             </div>
                         </div>
                         <div class="swiper-slide">
                             <div class="card card-hover profile-card">
 
-                                <img src="/public/images/teacher/banking.gif" alt="Aditya Kumar Gupta">
+                                <img src="public/images/teacher/banking.gif" alt="Vijay K Yadav">
                                 <div class="card-overlay">
-                                    <h2>Aditya Kumar Gupta</h2>
+                                    <h2>Vijay K Yadav</h2>
                                 </div>
                             </div>
                         </div>
