--- a/currentYearOfPlacement.html
+++ b/currentYearOfPlacement.html
@@ -73,10 +73,10 @@
                                     <a href="https://www.sifdt.com/" target="_blank"> E-Tender</a>
                                 </li>
                                 <li>
-                                    <a href="/cuetug-2025.html" target="_blank"> CUET(UG)-2025</a>
+                                    <a href="/cuetug-2026.html" target="_blank"> CUET(UG)-2026</a>
                                 </li>
                                 <li>
-                                    <a href="cuetpg-2025.html" target="_blank"> CUET(PG)-2025</a>
+                                    <a href="cuetpg-2026.html" target="_blank"> CUET(PG)-2026</a>
                                 </li>
                                 <li>
                                     <a href="https://smslawcollege.com/" target="_blank"> SMS Law College</a>
@@ -121,8 +121,7 @@
                                         <li><a href="corporate-advisory.html">Corporate Advisory</a></li>
                                     </ul>
                                 </li>
-                                <li class="submenu-item has-child hoverarrow"><a href="javascript:void(0)">Board of
-                                        Studies</a>
+                                <li class="submenu-item has-child hoverarrow"><a href="javascript:void(0)">Board of Studies</a>
                                     <ul class="submenu submenu--level2">
                                         <li><a href="management-and-mass-comm-department.html">Management & Mass Comm
                                                 Department</a></li>
@@ -735,7 +734,7 @@
     <section class="Rankings container-custom text-center pb-4">
         <h2 class=" gradient-one wow fadeInUp f-sm-20" data-wow-delay=".4s" style="padding-bottom:30px;">Students have
             already got on-campus placements this year.</h2>
-        <div class="student__slider swiper-container">
+        <div class="student__slider swiper overflow-hidden">
             <div class="swiper-wrapper">
                 <div class="swiper-slide wow fadeInUp" data-wow-delay=".4s">
                     <div class="studentTesti p-4"
