--- a/index.html
+++ b/index.html
@@ -892,9 +892,9 @@
                         SMS Varanasi.</h2>
                 </div>
                 <div class="teacher__course-wrapper">
-                    <div class="row g-sm-5 g-3">
+                    <div class="row g-sm-5 g-2">
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div class="course__item-3 white-bg mb-30 fix">
+                            <div class="course__item-3 white-bg mb-30 fix aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
                                 <div class="course__icon-3 text-center ps-1">
                                     <span>
                                         <svg width="26" height="28" viewBox="-0.5 0 25 25" fill="none"
@@ -928,7 +928,7 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div class="course__item-3 white-bg mb-30 fix ">
+                            <div class="course__item-3 white-bg mb-30 fix aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg width="20" height="26" viewBox="0 0 20 26" fill="none"
@@ -953,7 +953,7 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div class="course__item-3 white-bg mb-30 fix ">
+                            <div class="course__item-3 white-bg mb-30 fix aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg width="26" height="28" viewBox="0 0 26 28" fill="none"
@@ -984,7 +984,7 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div class="course__item-3 white-bg mb-30 fix">
+                            <div class="course__item-3 white-bg mb-30 fix aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg fill="" width="26" height="28" viewBox="0 0 16 16" id="register-16px"
@@ -1008,7 +1008,7 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div class="course__item-3 white-bg mb-30 fix">
+                            <div class="course__item-3 white-bg mb-30 fix aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg width="28" height="34" viewBox="0 0 28 34" fill="none"
@@ -1052,7 +1052,7 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div class="course__item-3 white-bg mb-30 fix ">
+                            <div class="course__item-3 white-bg mb-30 fix aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg width="22" height="21" viewBox="0 0 22 21" fill="none"
@@ -1079,7 +1079,7 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div class="course__item-3 white-bg mb-30 fix ">
+                            <div class="course__item-3 white-bg mb-30 fix aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg width="26" height="28" viewBox="0 0 24 24" fill="none"
@@ -1115,7 +1115,7 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div class="course__item-3 white-bg mb-30 fix">
+                            <div class="course__item-3 white-bg mb-30 fix aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg viewBox="0 0 24 24" fill="none" width="26" height="28"
@@ -1145,7 +1145,7 @@
                             </div>
                         </div>
                         <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
-                            <div class="course__item-3 white-bg mb-30 fix">
+                            <div class="course__item-3 white-bg mb-30 fix aos-init aos-animate" data-aos="fade-up" data-aos-delay="200">
                                 <div class="course__icon-3 ps-1 text-center">
                                     <span>
                                         <svg width="26" height="28" viewBox="0 0 26 28" fill="none"
@@ -2136,7 +2136,7 @@
     <!-- UI / animation libraries -->
     <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.2/vanilla-tilt.min.js"></script>
-
+<script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <!-- Slider -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
@@ -2148,7 +2148,8 @@
     <script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
 
     <!-- MAIN JS (always last + defer) -->
-    <script src="/index.js" defer></script>
+    <script src="/js/index.js" defer></script>
+    <script src="/js/chart.js" defer></script>
 
 
 
