--- a/international-linkage.html
+++ b/international-linkage.html
@@ -657,7 +657,7 @@
         <div class="container">
             <div class="section-heading text-center ">
 
-                <h2 class="text-center gradient-one wow fadeInUp" data-wow-delay=".6s">Panorama Photography Club</h2>
+                <h2 class="text-center gradient-one wow fadeInUp" data-wow-delay=".6s">International Linkage</h2>
             </div>
             <p>
                 School of Management Sciences has always been a pioneer institution for nurturing and grooming the
@@ -671,8 +671,8 @@
 
             </p>
 
-            <div class="about-varanasi pt-20 mediaLabs img-wrapper">
-                <img src="/public/images/campus/library.jpg" alt="" class="img-fluid scroll-grow-img">
+            <div class="about-varanasi pt-20 mediaLabs img-wrapper journey">
+                <img src="public/images/internationallink.jpg" alt="" class="img-fluid scroll-grow-img">
             </div>
 
             <div class="content-1 py-4">
@@ -689,7 +689,7 @@
                         India.</li>
                 </ul>
             </div>
-            <div class="row pt-4 gy-3">
+            <div class="row pt-4 gy-3 justify-content-center">
 
                 <div class="col-xxl-4 col-xl-4 col-lg-4 col-md-6">
                     <div class="course__item-3 transition-3 white-bg mb-30 fix d-flex align-items-center flex-row">
