--- a/list_of_recruiter.html
+++ b/list_of_recruiter.html
@@ -643,7 +643,7 @@
     </div>
     <!-- End Pages Banner Area -->
     <!-- breadcrumb area end -->
-    <section class="top_recruiter ">
+    <section class="top_recruiter mt-3">
         <div class="container">
             <div class="row pt-3">
                 <h2 class="text-light c-lerp-block_title" data-scroll data-scroll-delay="0.2" data-scroll-speed="0.8">
