--- a/news-room.html
+++ b/news-room.html
@@ -669,8 +669,8 @@
                 alumni, and external stakeholders, reflecting the dynamic learning environment and continuous growth
                 of the institution.
             </p>
-            <div class="about-varanasi pt-20 mediaLabs img-wrapper">
-                <img src="/public/images/campus/library.jpg" alt="" class="img-fluid scroll-grow-img">
+            <div class="about-varanasi pt-20 mediaLabs img-wrapper journey">
+                <img src="public/images/campus/about11.JPG" alt="" class="img-fluid scroll-grow-img">
             </div>
         </div>
         <!-- section 2 -->
