--- a/nptel.html
+++ b/nptel.html
@@ -700,12 +700,12 @@
                     is about learning through series of video lectures followed by quizzes and a written examination
                     for certification. It could be summaries as:</p>
                 <ul class="text-white list-unstyled">
-                    <li><i class="fa-light fa-rocket-launch"></i> Enrollment to the Course</li>
-                    <li><i class="fa-light fa-rocket-launch"></i> Learning Through Video Lectures</li>
-                    <li><i class="fa-light fa-rocket-launch"></i> Complete the Weekly Assignments</li>
-                    <li><i class="fa-light fa-rocket-launch"></i> Registration for the online exam with a nominal
+                    <li><i class="fa-solid fa-rocket"></i> Enrollment to the Course</li>
+                    <li><i class="fa-solid fa-rocket"></i> Learning Through Video Lectures</li>
+                    <li><i class="fa-solid fa-rocket"></i> Complete the Weekly Assignments</li>
+                    <li><i class="fa-solid fa-rocket"></i> Registration for the online exam with a nominal
                         fee</li>
-                    <li><i class="fa-light fa-rocket-launch"></i> Examination & Certification</li>
+                    <li><i class="fa-solid fa-rocket"></i> Examination & Certification</li>
                 </ul>
                 <p class="text-white">Certificate are provided for those candidate who have consolidated score of
                     40% and above,
