--- a/sms-knowledge-management-centre.html
+++ b/sms-knowledge-management-centre.html
@@ -697,7 +697,7 @@
                     <span>GD | Interview | Communication Skills</span>
                     <span>Coordinator : Dr. Gaurav Shah</span>
                 </div>
-                <div class="row knowledge-row">
+                <div class="row knowledge-row gy-3">
 
                     <div class="col-sm-4">
                         <div class="knowledge-card">
