--- a/view-faculty-details.html
+++ b/view-faculty-details.html
@@ -674,7 +674,7 @@
                                 <a href="#"><i class="fab fa-skype"></i></a>
                                 <a href="#"><i class="fab fa-linkedin-in"></i></a>
                             </div>
-                            <div class="it-teacher-details-left-info">
+                            <div class="it-teacher-details-left-info d-none d-sm-flex">
                                 <ul>
                                     <li>
                                         <i class="fa-solid fa-phone-volume"></i>
@@ -691,7 +691,7 @@
                                     </li>
                                 </ul>
                             </div>
-                            <div class="it-teacher-details-left-btn">
+                            <div class="it-teacher-details-left-btn d-none d-sm-flex">
                                 <a class="ed-btn-theme" href="/contact-us.html">
                                     <span>
                                         Contact us
@@ -759,6 +759,32 @@
                                         <p class="fw-bold">03</p>
                                     </div>
                                 </div>
+                            </div>
+
+                             <div class="it-teacher-details-left-info d-sm-none">
+                                <ul>
+                                    <li>
+                                        <i class="fa-solid fa-phone-volume"></i>
+                                        <a href="tel:(568)367987237">(+91) 111-222-333</a>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-location-dot"></i>
+                                        <a href="https://www.google.com/maps" target="_blank">sms campus, Khusipur,
+                                            Bachhawn, Uttar Pradesh 221011</a>
+                                    </li>
+                                    <li>
+                                        <i class="fa-solid fa-location-dot"></i>
+                                        <a href="mailto:govillage@gmail.com">director@smsvaranasi.com</a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="it-teacher-details-left-btn d-sm-none">
+                                <a class="ed-btn-theme" href="/contact-us.html">
+                                    <span>
+                                        Contact us
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </span>
+                                </a>
                             </div>
 
                         </div>
