--- a/centre-of-excellence.html
+++ b/centre-of-excellence.html
@@ -668,8 +668,8 @@
                 or heard before.
             </p>
 
-            <div class="about-varanasi pt-20 mediaLabs img-wrapper">
-                <img src="/public/images/campus/library.jpg" alt="" class="img-fluid scroll-grow-img">
+            <div class="about-varanasi pt-20 mediaLabs img-wrapper journey">
+                <img src="public/images/centerofexcelleance.png" alt="" class="img-fluid scroll-grow-img">
             </div>
 
             <div class="row pt-4 gy-3">
