--- a/cuetpg-2026.html
+++ b/cuetpg-2026.html
@@ -663,11 +663,11 @@
             </div>
             <section class="commendations alumni-pgdm py-4">
                 <div class="container">
-                    <div class="row g-4">
+                    <div class="row g-4 justify-content-center">
                         <div class="col-sm-4">
                             <div class="alumni-years">
                                 <a href="#">
-                                <h2 >Counselled Students List</h2>
+                                <h2 >Counselled Students <br> List</h2>
                                 <img src="/public/images/shape/wave.png" alt=""></a>
                             </div>
                         </div>
