--- a/placementTrackRecord.html
+++ b/placementTrackRecord.html
@@ -33,7 +33,7 @@
 
 <body class="bg-background">
     <!-- Navigation Header -->
-<header class="fixed top-0 left-0 right-0 z-50 bg-white/95 backdrop-blur-sm shadow-md transition-all duration-300"
+    <header class="fixed top-0 left-0 right-0 z-50 bg-white/95 backdrop-blur-sm shadow-md transition-all duration-300"
         id="mainHeader">
         <div class="header__border d-sm-block d-none">
             <div class="container">
@@ -331,7 +331,8 @@
                                 <ul class="mobile-submenu">
                                     <li class="mobilearrow"><a href="governing-council.html">Governing Council</a></li>
                                     <li class="mobilearrow"><a href="academic-council.html">Academic Council</a></li>
-                                    <li class="mobilearrow"><a href="corporate-advisory.html">Corporate Advisory</a></li>
+                                    <li class="mobilearrow"><a href="corporate-advisory.html">Corporate Advisory</a>
+                                    </li>
                                 </ul>
                             </li>
                             <li class="mobile-dropdown">
@@ -340,11 +341,14 @@
                                     <span class="mobile-arrow"></span>
                                 </div>
                                 <ul class="mobile-submenu">
-                                    <li class="mobilearrow"><a href="management-and-mass-comm-department.html">Management & Mass Comm
+                                    <li class="mobilearrow"><a
+                                            href="management-and-mass-comm-department.html">Management & Mass Comm
                                             Department</a></li>
-                                    <li class="mobilearrow"><a href="computer-science-department.html">Computer Science Department</a>
+                                    <li class="mobilearrow"><a href="computer-science-department.html">Computer Science
+                                            Department</a>
                                     </li>
-                                    <li class="mobilearrow"><a href="commerce-department.html">Commerce Department</a></li>
+                                    <li class="mobilearrow"><a href="commerce-department.html">Commerce Department</a>
+                                    </li>
                                 </ul>
                             </li>
                             <li class="mobile-dropdown">
@@ -355,7 +359,8 @@
                                 <ul class="mobile-submenu">
                                     <li class="mobilearrow"><a href="administrative-staff.html">Administrative</a></li>
                                     <li class="mobilearrow"><a href="accounts-staff.html">Accounts</a></li>
-                                    <li class="mobilearrow"><a href="computer-centre-staff.html">Computer Centre</a></li>
+                                    <li class="mobilearrow"><a href="computer-centre-staff.html">Computer Centre</a>
+                                    </li>
                                     <li class="mobilearrow"><a href="library-staff.html">Library</a></li>
                                 </ul>
                             </li>
@@ -365,9 +370,11 @@
                                     <span class="mobile-arrow"></span>
                                 </div>
                                 <ul class="mobile-submenu">
-                                    <li class="mobilearrow"><a href="architectural-philosophy.html">Administrative</a></li>
+                                    <li class="mobilearrow"><a href="architectural-philosophy.html">Administrative</a>
+                                    </li>
                                     <li class="mobilearrow"><a href="facilities-campus.html">Facilities@Campus</a></li>
-                                    <li class="mobilearrow"><a href="computer-centre-infrastructure.html">Computer Centre</a></li>
+                                    <li class="mobilearrow"><a href="computer-centre-infrastructure.html">Computer
+                                            Centre</a></li>
                                     <li class="mobilearrow"><a href="media-lab.html">Media Lab</a></li>
                                     <li class="mobilearrow"><a href="library-infrastructure.html">Library</a></li>
                                 </ul>
@@ -416,9 +423,15 @@
                                     <span class="mobile-arrow"></span>
                                 </div>
                                 <ul class="mobile-submenu">
-                                    <li class="mobilearrow"><a href="https://smsvaranasi.com/uploads/page_file/12048PLACEMENT-BROCHURE-2026.pdf">Placement Brochure-PG</a></li>
-                                    <li class="mobilearrow"><a href="https://smsvaranasi.com/uploads/page_file/13990Placement-Brochure_UG.pdf">Placement Brochure-UG</a></li>
-                                    <li class="mobilearrow"><a href="https://smsvaranasi.com/uploads/page_file/76985Summer-Training-Brochure-2025.pdf">Summer Training Brochure</a>
+                                    <li class="mobilearrow"><a
+                                            href="https://smsvaranasi.com/uploads/page_file/12048PLACEMENT-BROCHURE-2026.pdf">Placement
+                                            Brochure-PG</a></li>
+                                    <li class="mobilearrow"><a
+                                            href="https://smsvaranasi.com/uploads/page_file/13990Placement-Brochure_UG.pdf">Placement
+                                            Brochure-UG</a></li>
+                                    <li class="mobilearrow"><a
+                                            href="https://smsvaranasi.com/uploads/page_file/76985Summer-Training-Brochure-2025.pdf">Summer
+                                            Training Brochure</a>
                                     </li>
 
                                 </ul>
@@ -446,11 +459,16 @@
                             <span class="mobile-arrow"></span>
                         </div>
                         <ul class="mobile-submenu">
-                            <li><a href="https://journals.smsvaranasi.com/index.php/managementinsight">Management Insight Journal</a></li>
-                            <li><a href="https://journals.smsvaranasi.com/index.php/purushartha">Purushartha Journal</a></li>
-                            <li><a href="https://journals.smsvaranasi.com/index.php/smsjei">SMS Journal of Enterpreneurship & Innovation</a></li>
-                            <li><a href="https://journals.smsvaranasi.com/index.php/crr">Commerce Research Review</a></li>
-                            <li><a href="https://journals.smsvaranasi.com/index.php/computingtrendz">Computing Trendz</a></li>
+                            <li><a href="https://journals.smsvaranasi.com/index.php/managementinsight">Management
+                                    Insight Journal</a></li>
+                            <li><a href="https://journals.smsvaranasi.com/index.php/purushartha">Purushartha Journal</a>
+                            </li>
+                            <li><a href="https://journals.smsvaranasi.com/index.php/smsjei">SMS Journal of
+                                    Enterpreneurship & Innovation</a></li>
+                            <li><a href="https://journals.smsvaranasi.com/index.php/crr">Commerce Research Review</a>
+                            </li>
+                            <li><a href="https://journals.smsvaranasi.com/index.php/computingtrendz">Computing
+                                    Trendz</a></li>
                         </ul>
                     </li>
 
@@ -537,7 +555,8 @@
                             <li><a href="aicte-approval.html">AICTE Approval</a></li>
                             <li><a href="affiliation-letter.html">Affiliation Letter</a></li>
                             <li><a href="ugc-12b-2f-letter.html">UGC 12(B) & 2(f) Letter</a></li>
-                            <li><a href="https://smsvaranasi.com/uploads/page_file/41088NIRF-Data-2025.pdf">NIRF</a></li>
+                            <li><a href="https://smsvaranasi.com/uploads/page_file/41088NIRF-Data-2025.pdf">NIRF</a>
+                            </li>
                         </ul>
                     </li>
 
@@ -612,7 +631,7 @@
     </header>
 
     <!-- Start Pages Banner Area -->
-    <div class="placementTrackpage pages-banner-area position-relative" >
+    <div class="placementTrackpage pages-banner-area position-relative">
         <div class="container-fluid">
             <div class="row gy-4">
                 <div class="col-lg-6">
@@ -762,6 +781,8 @@
                     <!-- End Table -->
                 </div>
             </section>
+
+            
 
         </div>
         <!-- companies -->
@@ -924,17 +945,21 @@
 
     <script id="dhws-dataInjector" src="../public/dhws-data-injector.js"></script>
     <script src="https://cdn-script.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+       <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11.1.0/swiper-bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.2/vanilla-tilt.min.js"></script>
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script src="/index.js"></script>
+    <script src="/chart.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
     <!-- Initialize Swiper -->
-
+    <!-- Chart.js -->
+ 
     <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
+
 
 
 </body>
