--- a/sms-commendations.html
+++ b/sms-commendations.html
@@ -587,10 +587,10 @@
                                     <a href="https://www.sifdt.com/" target="_blank"> E-Tender</a>
                                 </li>
                                 <li>
-                                    <a href="cuetug-2025.html" target="_blank"> CUET(UG)-2025</a>
+                                    <a href="cuetug-2026.html" target="_blank"> CUET(UG)-2026</a>
                                 </li>
                                 <li>
-                                    <a href="cuetpg-2025.html" target="_blank"> CUET(PG)-2025</a>
+                                    <a href="cuetpg-2026.html" target="_blank"> CUET(PG)-2026</a>
                                 </li>
                                 <li>
                                     <a href="https://smslawcollege.com/" target="_blank"> SMS Law College</a>
@@ -648,17 +648,11 @@
                 <div class="col-12">
                     <div class="faculty-card">
                         <div class="faculty-content" data-aos="fade-right" data-aos-delay="400">
-                            <h4 class="underlineHover animate-slide-up">Mr. Dhritendra Kumar Tripathi</h4>
-                            <p class="m-0">Vice President – Corporate Affairs</p>
-                            <p class="m-0"><i class="fa-regular fa-envelope"></i> <b>dktripathi@smsvaranasi.com</b>
-                            </p>
-                            <p class="m-0"><i class="fa-solid fa-phone"></i> <b>9935064429</b></p>
+                            <h4 class="underlineHover animate-slide-up">Prof Sadashiv Kumar Dwivedi</h4>
+                            <p class="m-0">Dept. of Sanskit, faculty of Arts, BHU Varanasi</p>
+                            
                             <p class="mt-2">
-                                Mr.Tripathi has done post graduate in labor & social Welfare and graduate in Pol.
-                                Sc.(Hons.) from Magadh University, Bodh-Gaya. He has 10 Years of Corporate Experience in
-                                a different organization where he has worked at different levels of Management in Human
-                                Resource Department. Currently, he is associated with SMS as Vice President-Corporate
-                                Affairs.
+                               I am grateful to the administration, faculties and students of the SMS Varanasi for giving me opportunity to interact with them and share some of the salient feature of Indian knowledge System absolutely inevitable for the sustenance of well- being.
                             </p>
                         </div>
                         <div class="faculty-image" data-aos="fade-left" data-aos-delay="400">
@@ -784,7 +778,7 @@
 
 
     <!-- Footer -->
-    <footer class="footer text-white pt-16 pb-8">
+      <footer class="footer text-white pt-16 pb-8">
         <div class="container-custom">
             <div class="footer-cols">
                 <!-- About Column -->
@@ -792,16 +786,16 @@
                 <div class="text-deco-none">
                     <h3 class="font-headline font-bold text-lg mb-6">Admission</h3>
                     <ul class="space-y-3">
-                        <li><a href="javascript:void(0)"
+                        <li><a href="scholarship.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Scholarships</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://epay.smsvaranasi.com/"
                                 class="text-gray-400 hover:text-accent transition-colors">Online Fee Deposit</a></li>
-                        <li><a href="javascript:void(0)" class="text-gray-400 hover:text-accent transition-colors">Our
+                        <li><a href="list_of_recruiter.html"
+                                class="text-gray-400 hover:text-accent transition-colors">Our
                                 Recruiters</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="hostel-transport.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Hostel & Transport</a></li>
-                        <li><a href="javascript:void(0)"
-                                class="text-gray-400 hover:text-accent transition-colors">FAQ</a>
+                        <li><a href="FAQ.html" class="text-gray-400 hover:text-accent transition-colors">FAQ</a>
                         </li>
                     </ul>
                 </div>
@@ -810,10 +804,10 @@
                 <div class="text-deco-none">
                     <h3 class="font-headline font-bold text-lg mb-6">Media</h3>
                     <ul class="space-y-3">
-                        <li><a href="javascript:void(0)" class="text-gray-400 hover:text-accent transition-colors ">News
+                        <li><a href="news-room.html" class="text-gray-400 hover:text-accent transition-colors ">News
                                 Room</a></li>
-                        <li><a href="javascript:void(0)"
-                                class="text-gray-400 hover:text-accent transition-colors ">Video Gallery</a></li>
+                        <li><a href="video-clips.html" class="text-gray-400 hover:text-accent transition-colors ">Video
+                                Gallery</a></li>
 
                     </ul>
                 </div>
@@ -822,9 +816,8 @@
                 <div class="text-deco-none">
                     <h3 class="font-headline font-bold text-lg mb-6">Events</h3>
                     <ul class="space-y-3">
-                        <li><a href="javascript:void(0)"
-                                class="text-gray-400 hover:text-accent transition-colors">FDP</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="fdp.html" class="text-gray-400 hover:text-accent transition-colors">FDP</a></li>
+                        <li><a href="https://icon.smsvaranasi.com/"
                                 class="text-gray-400 hover:text-accent transition-colors">ICON</a></li>
                     </ul>
                 </div>
@@ -833,24 +826,26 @@
                 <div class="text-deco-none">
                     <h3 class="font-headline font-bold text-lg mb-6">Student's Club</h3>
                     <ul class="space-y-3">
-                        <li><a href="javascript:void(0)"
+                        <li><a href="rainbow-social-welfare-club.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Rainbow (Social Welfare
                                 Club)</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="contrast-creative-club.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Contrast (Creative Club)</a>
                         </li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="synergy-the-literary-club.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Synergy (The Literary
                                 Club)</a></li>
-                        <li><a href="javascript:void(0)" class="text-gray-400 hover:text-accent transition-colors">Spark
+                        <li><a href="spark-performing-arts-cultural-club.html"
+                                class="text-gray-400 hover:text-accent transition-colors">Spark
                                 (Performing Arts Cultural Club)</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="panorama-photography-club.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Panorama (Photography
                                 Club)</a>
                         </li>
-                        <li><a href="javascript:void(0)" class="text-gray-400 hover:text-accent transition-colors">Crest
+                        <li><a href="crest-sports-club.html"
+                                class="text-gray-400 hover:text-accent transition-colors">Crest
                                 (Sports Club)</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="technical-club.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Livewire (Technical Club)</a>
                         </li>
                     </ul>
@@ -859,30 +854,31 @@
                 <div class="text-deco-none">
                     <h3 class="font-headline font-bold text-lg mb-6">Other Useful Links</h3>
                     <ul class="space-y-3">
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://pmvidyalaxmi.co.in/"
                                 class="text-gray-400 hover:text-accent transition-colors">PM-Vidya lakshmi</a></li>
-                        <li><a href="javascript:void(0)" class="text-gray-400 hover:text-accent transition-colors">Vidya
+                        <li><a href="https://www.vidyalakshmi.co.in/Students/"
+                                class="text-gray-400 hover:text-accent transition-colors">Vidya
                                 lakshmi</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="spoken-tutorials.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Spoken Tutorials</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="awards-and-accolades.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Awards and Accolades</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="centre-of-excellence.html"
                                 class="text-gray-400 hover:text-accent transition-colors">Centre of Excellence</a>
                         </li>
-                        <li><a href="javascript:void(0)"
-                                class="text-gray-400 hover:text-accent transition-colors">NPTEL</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="nptel.html" class="text-gray-400 hover:text-accent transition-colors">NPTEL</a>
+                        </li>
+                        <li><a href="international-linkage.html"
                                 class="text-gray-400 hover:text-accent transition-colors">International Linkage</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://iqac.smsvaranasi.com/"
                                 class="text-gray-400 hover:text-accent transition-colors">IQAC</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://grievance.smsvaranasi.com/"
                                 class="text-gray-400 hover:text-accent transition-colors">GRIEVANCE PORTAL</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://www.aicte.gov.in/"
                                 class="text-gray-400 hover:text-accent transition-colors">AICTE</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="http://naac.gov.in/index.php/en/"
                                 class="text-gray-400 hover:text-accent transition-colors">NAAC</a></li>
-                        <li><a href="javascript:void(0)"
+                        <li><a href="https://www.ugc.gov.in/"
                                 class="text-gray-400 hover:text-accent transition-colors">UGC</a></li>
                     </ul>
                 </div>
@@ -893,26 +889,35 @@
                 <div class="flex flex-col md:flex-row justify-between items-center space-y-4 md:space-y-0">
                     <div class="icons">
                         <ul class="flex gap-2">
-                            <li><img loading="lazy" src="public/images/icons/twitter.png" alt="twitter socialIcons"
-                                    style="height: 28px;"></li>
-                            <li><img loading="lazy" src="public/images/icons/linkedin.png" alt="linkedin socialIcons"
-                                    style="height: 28px;"></li>
-                            <li><img loading="lazy" src="public/images/icons/instagram.png" alt="instagram socialIcons"
-                                    style="height: 28px;"></li>
-                            <li><img loading="lazy" src="public/images/icons/youtube.png  " alt="youtube socialIcons"
-                                    style="height: 28px;"></li>
-                            <li><img loading="lazy" src="public/images/icons/wordpress.png" alt="wordpress socialIcons"
-                                    style="height: 28px;"></li>
-                            <li><img loading="lazy" src="public/images/icons/facebook.png" alt="facebook socialIcons"
-                                    style="height: 28px;"></li>
+                            <li><a href="https://x.com/smsvaranasi"><img loading="lazy"
+                                        src="public/images/icons/twitter.png" alt="twitter socialIcons"
+                                        style="height: 28px;"></a></li>
+                            <li><a
+                                    href="https://www.linkedin.com/school/school-of-management-sciences-varanasi/?originalSubdomain=in"><img
+                                        loading="lazy" src="public/images/icons/linkedin.png" alt="linkedin socialIcons"
+                                        style="height: 28px;"></a></li>
+                            <li><a href="https://www.instagram.com/sms_varanasi/"><img loading="lazy"
+                                        src="public/images/icons/instagram.png" alt="instagram socialIcons"
+                                        style="height: 28px;"></a></li>
+                            <li><a href="https://www.youtube.com/channel/UCRaZkDJoPUPVfFpwtI6RgEg"><img loading="lazy"
+                                        src="public/images/icons/youtube.png  " alt="youtube socialIcons"
+                                        style="height: 28px;"></a></li>
+                            <li><a href="https://smsvaranasi.wordpress.com/"><img loading="lazy"
+                                        src="public/images/icons/wordpress.png" alt="wordpress socialIcons"
+                                        style="height: 28px;"></a></li>
+                            <li><a href="https://www.facebook.com/smsvns"><img loading="lazy"
+                                        src="public/images/icons/facebook.png" alt="facebook socialIcons"
+                                        style="height: 28px;"></a></li>
                         </ul>
 
                         <p class="text-white text-sm">© School of Management Sciences, Varanasi</p>
                     </div>
                     <div class="flex space-x-6 text-sm">
-                        <a href="javascript:void(0)" class="text-accent hover:text-accent transition-colors">Mandatory
+                        <a href="https://www.smsvaranasi.com/mandatory/MANDATORY%20DISCLOSURE.pdf"
+                            class="text-accent hover:text-accent transition-colors">Mandatory
                             Disclosure </a>
-                        <a href="javascript:void(0)" class="text-accent hover:text-accent transition-colors">SITEMAP</a>
+                        <a href="https://smsvaranasi.com/sitemap.xml"
+                            class="text-accent hover:text-accent transition-colors">SITEMAP</a>
 
                     </div>
                 </div>
@@ -930,7 +935,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/vanilla-tilt/1.7.2/vanilla-tilt.min.js"></script>
     <!-- Swiper JS -->
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="/index.js"></script>
+    <script src="/index.js" defer></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
         crossorigin="anonymous"></script>
